# ShockFinder

./: .gitignore  README.md  pyproject.toml
examples/: galaxy.py  mach_distribution.py  plot_mach_map.py  plot_shock_dissipation.py
shocktest/: __init__.py  core.py  painter.py  pyShockFinder.py
shocktest/fortran/: shockfinder.f90
tests/: plot_synthetic_shocks.py  synthetic_shocks.py  test_maps.py  test_smoke.py  test_synthetic_shocks.py
